--- a/app/openid_connect/templates/openid_connect/auth_code/callback.html
+++ b/app/openid_connect/templates/openid_connect/auth_code/callback.html
@@ -9,14 +9,14 @@
             Because it's a redirection-based flow, the client must be able to interact with the resource owner's user agent (typically a web browser),
             and capable of receiving incoming requests from the authorization server.
         </p>
-
-        <h2> Step One: Authorization </h2>
-        <p> The first step of the flow is to redirect to the authorization endpoint. This URL includes the client ID, requested scopes,
-            and redirect URI. Once successful, the authorization server will return a code.
-        </p>
-        <p> Click below to get redirected: </p>
+        <h2> Step Two: Code Exchange </h2>
+        <p> Once successfully authenticated, you'll receive a code and state. </p>
+        <p> <b>Code:</b> {{ code }} <br>
+        <b>State:</b> {{ state }} </p>
+        <p> The code is what will be exchanged for the token, while the state is merely a security measure. </p>
+        <p> Click below to get redirected to the token endpoint: </p>
         <div class="container-section">
-            <button type="submit" onclick="location.href='auth_code/auth'" value="auth-code_auth"> Authorization Endpoint </button>
+            <button type="submit" onclick="location.href='token'" value="auth-code_token"> Token Endpoint </button>
         </div>
     </div>
 </div>
