--- a/app/openid_connect/templates/openid_connect/auth_code/claims.html
+++ b/app/openid_connect/templates/openid_connect/auth_code/claims.html
@@ -9,15 +9,10 @@
             Because it's a redirection-based flow, the client must be able to interact with the resource owner's user agent (typically a web browser),
             and capable of receiving incoming requests from the authorization server.
         </p>
-
-        <h2> Step One: Authorization </h2>
-        <p> The first step of the flow is to redirect to the authorization endpoint. This URL includes the client ID, requested scopes,
-            and redirect URI. Once successful, the authorization server will return a code.
-        </p>
-        <p> Click below to get redirected: </p>
-        <div class="container-section">
-            <button type="submit" onclick="location.href='auth_code/auth'" value="auth-code_auth"> Authorization Endpoint </button>
-        </div>
+        <h2> Step Four: Claims </h2>
+        <p> Once you decode the token, you'll find whatever attributes and claims are sent in the payload. You can then use these claims within your application to authorize access, limit funcionality, and perform
+            role based access control (RBAC). </p>
+        <p> <b>Claims:</b> {{ claims }}</p>
     </div>
 </div>
 
