--- a/app/main/templates/main/home.html
+++ b/app/main/templates/main/home.html
@@ -9,7 +9,7 @@
         <h2> OpenID Connect </h2>
         <div class="container-section">
             <button class="oidc" type="submit" onclick="location.href='openid_connect/auth_code'" value="oidc-auth-code-flow"> Authorization Code Flow </button>
-            <button class="oidc" type="submit" value="oidc-implict-flow"> Implicit Flow</button>
+            <button class="oidc" type="submit" onclick="location.href='openid_connect/implicit'" value="oidc-implict-flow"> Implicit Flow</button>
             <button class="oidc" type="submit" value="oidc-implict-flow"> Client Credentials Flow</button>
         </div>
         <h2> SAML </h2>
