--- a/app/openid_connect/templates/openid_connect/auth_code/callback.html
+++ b/app/openid_connect/templates/openid_connect/auth_code/callback.html
@@ -11,7 +11,7 @@
         </p>
         <h2> Step Two: Code Exchange </h2>
         <p> Once successfully authenticated, you'll receive a code and state. </p>
-        <p> <b>Code:</b> {{ code }} <br>
+        <p> <b>Code:</b> {{ code }} <br><br>
         <b>State:</b> {{ state }} </p>
         <p> The code is what will be exchanged for the token, while the state is merely a security measure. </p>
         <p> Click below to get redirected to the token endpoint: </p>
