--- a/app/main/templates/main/home.html
+++ b/app/main/templates/main/home.html
@@ -5,7 +5,8 @@
 <div class="wrap">
     <div class="container">
         <h1> Welcome to Authflow.</h1>
-        <p> Visualize different single sign-on flows using the buttons below, depending on the protocol. Configuration is set within the application, and depends on LDAP and Kerberos.</p>
+        <p> Visualize different single sign-on flows using the buttons below, depending on the protocol. Configuration is set within the application, and depends on LDAP and Kerberos.<br><br>
+        Please note: This is a work in progress and there is only support for OIDC Auth Code Flow and Implicit Flow! The other flows will be added in the near future. </p>
         <h2> OpenID Connect </h2>
         <div class="container-section">
             <button class="oidc" type="submit" onclick="location.href='openid_connect/auth_code'" value="oidc-auth-code-flow"> Authorization Code Flow </button>
